--- a/assets/css/login-page-digikala.css
+++ b/assets/css/login-page-digikala.css
@@ -26,10 +26,10 @@ input[type="email"], input[type="tel"], input[type="password"], input[type="text
     margin: 0 !important;
 }
 input[type="email"]:focus, input[type="tel"]:focus, input[type="password"]:focus, input[type="text"]:focus {
-    border: 1px solid var(--var-otino-main-color);
+    border: 1px solid var(--var-readysms-main-color);
 }
 textarea:focus, input[type="text"]:focus, input[type="email"]:focus, select:focus, input[type="password"]:focus {
-    border-color: var(--var-otino-main-color) !important;
+    border-color: var(--var-readysms-main-color) !important;
 }
 a {
     text-decoration: none;
@@ -85,7 +85,7 @@ body * {
 button {
     width: 100%;
     border-radius: 15px !important;
-    background-color: var(--var-otino-main-color) !important;
+    background-color: var(--var-readysms-main-color) !important;
     color: #fff !important;
     font-weight: 600;
     padding: 12px !important;
@@ -93,15 +93,15 @@ button {
     font-size: 18px;
     border: none;
 }
-.otino-otp-form {
+.readysms-otp-form {
     flex-direction: column;
     gap: 15px;
 }
-.response-otino {
+.readysms-messages {
     width: 100%;
     border-radius: 9px;
 }
-.box-main-login-page-otino {
+.box-main-login-page-readysms {
     width: 100%;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -109,30 +109,30 @@ button {
     height: 100%;
     min-height: 100vh;
 }
-.image-side-form-otino > img {
+.image-side-form-readysms > img {
     max-width: 630px;
 }
-.logo-image-login-page-otino {
+.logo-image-login-page-readysms {
     max-height: 50px;
     width: auto;
 }
-.image-side-form-otino {
+.image-side-form-readysms {
     flex-direction: column;
 }
-.image-side-form-otino > span > strong {
+.image-side-form-readysms > span > strong {
     color: #2B7EFE;
     padding: 0 4px;
 }
-.digikala-main-box .go-back-btn-login-page-otino {
+.digikala-main-box .go-back-btn-login-page-readysms {
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.login-form-box-otino {
+.login-form-box-readysms {
     flex: 1;
 }
-.box-logo-title-above-form-login-otino {
+.box-logo-title-above-form-login-readysms {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -142,7 +142,7 @@ button {
     width: 100%;
     position: relative;
 }
-.login-form-wrapper-otino {
+.login-form-wrapper-readysms {
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
@@ -155,13 +155,13 @@ button {
     overflow: hidden;
     max-width: 440px;
 }
-.image-side-form-otino > span {
+.image-side-form-readysms > span {
     font-weight: 600;
     font-size: 20px;
     position: relative;
     z-index: 0;
 }
-.image-side-form-otino > span::after {
+.image-side-form-readysms > span::after {
     content: "";
     position: absolute;
     background: #F1F8FF;
@@ -170,18 +170,18 @@ button {
     z-index: -1;
     top: 20px;
 }
-.roles-text-under-form-login-otino {
+.roles-text-under-form-login-readysms {
     color: #8492A1;
     font-weight: 500;
     font-size: 13px;
     text-align: center;
     margin-top: 5px;
 }
-.roles-page-link-otino {
+.roles-page-link-readysms {
     color: #52667B !important;
     text-decoration: none !important;
 }
-.otino-mobile-label-form {
+.readysms-mobile-label-form {
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -189,7 +189,7 @@ button {
     gap: 12px;
     margin: auto;
 }
-.otino-mobile-label-form input {
+.readysms-mobile-label-form input {
     text-align: center;
     letter-spacing: 10px;
     font-size: 16px;
@@ -197,38 +197,38 @@ button {
     box-sizing: border-box;
     line-height: 1.5em;
 }
-.otino-login-form {
+.readysms-login-form {
     display: flex;
     flex-direction: column;
     width: 100%;
     gap: 30px;
 }
-.desc-above-form-login-otino {
+.desc-above-form-login-readysms {
     margin: 0 auto 20px;
     font-size: 15px;
     font-weight: 400;
 }
-.no-template-otino .form-row {
+.no-template-readysms .form-row {
     margin: 0;
 }
-.login-form-wrapper-otino.otp-activated .title-under-logo-login-otino,
-.login-form-wrapper-otino.otp-activated .go-back-btn-login-page-otino,
-.login-form-wrapper-otino.otp-activated .otino-otp-form label,
-.login-form-wrapper-otino.otp-activated .roles-text-under-form-login-otino,
+.login-form-wrapper-readysms.otp-activated .title-under-logo-login-readysms,
+.login-form-wrapper-readysms.otp-activated .go-back-btn-login-page-readysms,
+.login-form-wrapper-readysms.otp-activated .readysms-otp-form label,
+.login-form-wrapper-readysms.otp-activated .roles-text-under-form-login-readysms,
 label span.required {
     display: none;
 }
-.login-form-wrapper-otino.otp-activated .desc-above-form-login-otino.otp-activated {
+.login-form-wrapper-readysms.otp-activated .desc-above-form-login-readysms.otp-activated {
     display: flex;
 }
-.desc-above-form-login-otino.otp-activated {
+.desc-above-form-login-readysms.otp-activated {
     display: none;
     gap: 10px;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
 }
-.no-template-otino {
+.no-template-readysms {
     position: static !important;
 }
 .woocommerce-form-login__rememberme {
@@ -365,7 +365,7 @@ input[type="password"] ~ .show-pass, input[type="text"] ~ .hide-pass {
     width: fit-content;
     margin: auto;
 }
-.circles-otino{
+.circles-readysms{
     position: absolute;
     top: 0;
     left: 0;
@@ -373,76 +373,76 @@ input[type="password"] ~ .show-pass, input[type="text"] ~ .hide-pass {
     height: 100%;
     overflow: hidden;
 }
-.circles-otino li {
+.circles-readysms li {
     position: absolute;
     display: block;
     list-style: none;
     width: 20px;
     height: 20px;
-    background: var(--var-otino-main-color);
+    background: var(--var-readysms-main-color);
     opacity: 0.15 !important;
     animation: animate-circles 25s linear infinite;
     bottom: -150px;
 }
-.circles-otino li:nth-child(1){
+.circles-readysms li:nth-child(1){
     left: 25%;
     width: 80px;
     height: 80px;
     animation-delay: 0s;
 }
-.circles-otino li:nth-child(2){
+.circles-readysms li:nth-child(2){
     left: 10%;
     width: 20px;
     height: 20px;
     animation-delay: 2s;
     animation-duration: 12s;
 }
-.circles-otino li:nth-child(3){
+.circles-readysms li:nth-child(3){
     left: 70%;
     width: 20px;
     height: 20px;
     animation-delay: 4s;
 }
-.circles-otino li:nth-child(4){
+.circles-readysms li:nth-child(4){
     left: 40%;
     width: 60px;
     height: 60px;
     animation-delay: 0s;
     animation-duration: 18s;
 }
-.circles-otino li:nth-child(5){
+.circles-readysms li:nth-child(5){
     left: 65%;
     width: 20px;
     height: 20px;
     animation-delay: 0s;
 }
-.circles-otino li:nth-child(6){
+.circles-readysms li:nth-child(6){
     left: 75%;
     width: 110px;
     height: 110px;
     animation-delay: 3s;
 }
-.circles-otino li:nth-child(7){
+.circles-readysms li:nth-child(7){
     left: 35%;
     width: 150px;
     height: 150px;
     animation-delay: 7s;
 }
-.circles-otino li:nth-child(8){
+.circles-readysms li:nth-child(8){
     left: 50%;
     width: 25px;
     height: 25px;
     animation-delay: 15s;
     animation-duration: 45s;
 }
-.circles-otino li:nth-child(9){
+.circles-readysms li:nth-child(9){
     left: 20%;
     width: 15px;
     height: 15px;
     animation-delay: 2s;
     animation-duration: 35s;
 }
-.circles-otino li:nth-child(10){
+.circles-readysms li:nth-child(10){
     left: 85%;
     width: 150px;
     height: 150px;
@@ -464,25 +464,25 @@ input[type="password"] ~ .show-pass, input[type="text"] ~ .hide-pass {
     }
 
 }
-.go-home-btn-otino {
-    color: var(--var-otino-main-color) !important;
+.go-home-btn-readysms {
+    color: var(--var-readysms-main-color) !important;
     width: calc(100% - 40px);
     padding: 12px 0 8px;
     border-radius: 14px;
     font-size: 18px;
     text-decoration: none;
-    border: 3px solid var(--var-otino-main-color);
+    border: 3px solid var(--var-readysms-main-color);
     font-weight: 500;
     z-index: 1;
     margin-top: 20px;
 }
-.logo-otino-login {
+.logo-readysms-login {
     max-width: 190px;
     height: auto;
     max-height: 100px;
     width: auto;
 }
-.form-login-otino {
+.form-login-readysms {
     flex-direction: column;
     gap: 10px;
     width: calc(100% - 40px);
@@ -496,7 +496,7 @@ input[type="password"] ~ .show-pass, input[type="text"] ~ .hide-pass {
 button {
     width: 100%;
     border-radius: 15px !important;
-    background-color: var(--var-otino-main-color) !important;
+    background-color: var(--var-readysms-main-color) !important;
     color: #fff;
     font-weight: 600;
     padding: 12px !important;
@@ -515,7 +515,7 @@ button {
 .woocommerce-error[role=alert]::before {
     display: none;
 }
-.title-under-logo-login-otino {
+.title-under-logo-login-readysms {
     font-weight: 600;
 }
 .digikala-main-box {
@@ -531,7 +531,7 @@ button {
     padding: 32px;
     border-radius: 8px;
 }
-.title-under-logo-login-lobgu {
+.title-under-logo-login-readysms {
     font-size: 18px;
     font-weight: 700;
     line-height: 2.1;
@@ -541,18 +541,18 @@ button {
     align-items: center;
     padding: 15px 0;
 }
-.desc-above-form-login-lobgu {
+.desc-above-form-login-readysms {
     display: flex;
     width: 100%;
     justify-content: right;
     align-items: center;
 }
-.roles-text-under-form-login-lobgu {
+.roles-text-under-form-login-readysms {
     font-size: 12px;
     margin-top: 5px;
     text-align: center;
 }
-.digikala-main-box label[for="otino_mobile"] {
+.digikala-main-box label[for="readysms_mobile"] {
     display: none;
 }
 .digikala-main-box button {
